added a user controler

--- a/Vision/appsettings.json
+++ b/Vision/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "SendGridKey": "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",
+  "SendGridUser": "BulkyBook",
+
   "AllowedHosts": "*"
 }
