--- a/Vision/Vision.csproj
+++ b/Vision/Vision.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\images\team\" />
     <Folder Include="wwwroot\images\services\" />
   </ItemGroup>
 
